<resources>
    <string name="app_name">Fundamental-Intent</string>
    <string name="pindag_activity">Pindag Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="move_activity">Move Activity</string>
    <string name="pindah_dengan_data">Pindah Dengan Data</string>
    <string name="terima_data">terima data</string>
    <string name="pindah_dengan_objek">PINDAH DENGAN OBJEK</string>
    <string name="recieve_object">recieve object</string>
</resources>
